Add shortcut keys and update edit skeleton dialog when opening it

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -220,12 +220,12 @@
   </action>
   <action name="actionSave_All">
    <property name="text">
-    <string>Save All...</string>
+    <string>Save Sim...</string>
    </property>
   </action>
   <action name="actionOpen_All">
    <property name="text">
-    <string>Open All...</string>
+    <string>Open Sim...</string>
    </property>
   </action>
   <action name="actionCreate_tets_from_ply">
